--- a/Mod_1/Descriptive_Stats/Descriptive_Statistics_updated.ipynb
+++ b/Mod_1/Descriptive_Stats/Descriptive_Statistics_updated.ipynb
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -278,20 +278,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "#write a function that returns the mean \n",
     "\n",
-    "def calc_mean():\n",
-    "    \n",
-    "    return "
+    "def calc_mean(data):\n",
+    "    return sum(data)/len(data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +299,7 @@
        "62.1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,12 +307,41 @@
    "source": [
     "#call this function on the weights list\n",
     "\n",
-    "calc_mean()"
+    "calc_mean(weights)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Write a function that returns the median \n",
+    "\n",
+    "def calc_median(data):\n",
+    "    if len(data)%2 == 0:\n",
+    "        mid_left = data[len(data) // 2 -1]\n",
+    "        mid_right = data[len(data) // 2 ]\n",
+    "        avg = (mid_left + mid_right) / 2\n",
+    "    else:\n",
+    "        avg = data[len(data) // 2] \n",
+    "    return avg\n",
+    "\n",
+    "# def calc_median(data):\n",
+    "#     if len(data)%2==1:\n",
+    "#         index = len(data)/2\n",
+    "#     else:\n",
+    "#         mid_left = data[len(data) // 2 -1]\n",
+    "#         mid_right = data[len(data) // 2 ]\n",
+    "#         index = \n",
+    "        \n",
+    "    \n",
+    "#     return data[index]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -322,25 +350,14 @@
        "60.5"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Write a function that returns the median \n",
-    "\n",
-    "def calc_median(data):\n",
-    "    return"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Call the function on weights"
+    "# Call the function on weights\n",
+    "calc_median(weights)"
    ]
   },
   {
@@ -460,12 +477,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#variance fuction"
+    "#variance fuction\n",
+    "\n",
+    "def variance(data):\n",
+    "    n = len(data)\n",
+    "    mean = calc_mean(data)\n",
+    "    squared = [(x - mean)**2 for x in data]\n",
+    "    return (1/(n-1))*sum(squared)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51.87777777777777"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "variance(weights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -486,23 +543,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[110, 112, 112, 116, 120, 122, 126, 128, 140, 156]"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[55, 56, 56, 58, 60, 61, 63, 64, 70, 78]\n"
+     ]
     }
    ],
    "source": [
-    "print(data)\n",
-    "times_2 = [x*2 for x in data]"
+    "print(weights)\n",
+    "times_2 = [x*2 for x in weights]"
    ]
   },
   {
@@ -514,17 +568,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "def calc_var(data):\n",
+    "    return sum([(x - calc_mean(data))**2 for x in data])/(len(data)-1)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "51.87777777777777"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "calc_var(weights)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -537,7 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -548,29 +619,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "66.1\n"
-     ]
-    },
     {
      "data": {
       "text/plain": [
        "66.1"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "increase_mean(data, 4)"
+    "increase_mean(weights, 4)"
    ]
   },
   {
@@ -584,35 +648,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "import math \n",
     "\n",
-    "def calc_std():\n",
+    "def calc_std(data):\n",
     "\n",
-    "    return "
+    "    return calc_var(data)**(0.5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "51.87777777777777"
+       "7.202622979011033"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "calc_var()"
+    "calc_std(weights)"
    ]
   },
   {
@@ -643,7 +707,7 @@
     "\n",
     "$$\\sigma_{jk} = \\frac{1}{N}\\sum_{i=1}^{N}(X_{ij}-\\bar{x}_j)(X_{ik}-\\bar{x}_k)$$\n",
     "\n",
-    "Hwever we often use the sample covariance since we normally do not know the population parameters. This can be calculated using the formula below:\n",
+    "However we often use the sample covariance since we normally do not know the population parameters. This can be calculated using the formula below:\n",
     "\n",
     "\n",
     "$$s_{jk} = \\frac{1}{n-1}\\sum_{i=1}^{n}(x_{ij}-\\bar{x}_j)(x_{ik}-\\bar{x}_k)$$\n"
@@ -736,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 45,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -774,11 +838,129 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "114.2426564464631"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_five_w = weights[:5]\n",
+    "first_five_h = heights[:5]\n",
+    "\n",
+    "# write formula to calculate covariance\n",
+    "def calc_covariance(data_1, data_2):\n",
+    "    n = len(data_1)\n",
+    "    one = [x - calc_mean(data_1) for x in data_1]\n",
+    "    two = [y - calc_mean(data_2) for y in data_2]\n",
+    "    under_sigma = [one[i]*two[i] for i in range(len(one))]\n",
+    "    #under_sigma = [j*k for j, k in zip(one, two)]\n",
+    "    #under_sigma = [j*k for j in one for k in two]\n",
+    "    return sum(under_sigma)/(n-1)\n",
+    "\n",
+    "calc_covariance(weights, heights)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "55.248703149135"
+      ]
+     },
+     "execution_count": 92,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_five_w = weights[:5]\n",
+    "first_five_h = heights[:5]\n",
+    "\n",
+    "    \n",
+    "def calc_covariance(data_1, data_2):\n",
+    "    n = len(data_1)\n",
+    "    one = [x - calc_mean(data_1) for x in data_1]\n",
+    "    two = [y - calc_mean(data_2) for y in data_2]\n",
+    "    #[a*b for a,b in zip(lista,listb)]\n",
+    "    #ab = [a[i]*b[i] for i in range(len(a))]\n",
+    "    under_sigma = [one[i]*two[i] for i in range(len(one))]\n",
+    "    #under_sigma = [j*k for j in one for k in two]\n",
+    "    return sum(under_sigma)/(n-1) \n",
+    "\n",
+    "calc_covariance(first_five_w, first_five_h)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(5,\n",
+       " 5,\n",
+       " 10,\n",
+       " [33.226130743400006,\n",
+       "  -46.35695991573701,\n",
+       "  4.073423119463001,\n",
+       "  11.375037866040003,\n",
+       "  -2.3176318131660025],\n",
+       " [2.176656873586367,\n",
+       "  -2.8884560980383327,\n",
+       "  2.4397452478562656,\n",
+       "  0.06061825940906829,\n",
+       "  -1.78856428281334],\n",
+       " 208.667432437037,\n",
+       " 71.67036014392863)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# write formula to calculate covariance"
+    "def calculations(data_1, data_2):\n",
+    "    n = len(data_1)+len(data_2)\n",
+    "    one = [x - calc_mean(data_1) for x in data_1]\n",
+    "    two = [y - calc_mean(data_2) for y in data_2]\n",
+    "    return len(one), len(two), n, one, two, calc_mean(first_five_w), calc_mean(first_five_h)\n",
+    "\n",
+    "calculations(first_five_w, first_five_h)\n",
+    "\n",
+    "\n",
+    "# [241.893563180437, 162.3104725213, 212.7408555565, 220.042470303077, 206.349800623871]\n",
+    "# [73.847017017515, 68.7819040458903, 74.1101053917849, 71.7309784033377, 69.8817958611153]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy"
    ]
   },
   {
@@ -787,7 +969,61 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write formula to calculate correlation"
+    "numpy.cov()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1030.95185544,  114.24265645],\n",
+       "       [ 114.24265645,   14.80347264]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numpy.cov(numpy.array([weights, heights]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write formula to calculate correlation\n",
+    "\n",
+    "def correlation(data_1, data_2):\n",
+    "    return calc_covariance(data_1, data_2)/(calc_std(data_1)*calc_std(data_2))\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9247562987409157"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "correlation(weights, heights)"
    ]
   },
   {
@@ -830,7 +1066,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
