--- a/Mod_1/OOP_updated/Intro_OOP.ipynb
+++ b/Mod_1/OOP_updated/Intro_OOP.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,13 +91,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bmi subject1 = 30\n",
+      "bmi subject2 = 29\n",
+      "bmi subject3 = 29\n",
+      "bmi subject4 = 24\n",
+      "bmi subject5 = 28\n"
+     ]
+    }
+   ],
    "source": [
     "# Subject data = [weight_kg, height_m]\n",
     "subject1 = [80, 1.62]\n",
@@ -142,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -288,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -307,18 +319,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "type(dictionary)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['__class__',\n",
+       " '__contains__',\n",
+       " '__delattr__',\n",
+       " '__delitem__',\n",
+       " '__dir__',\n",
+       " '__doc__',\n",
+       " '__eq__',\n",
+       " '__format__',\n",
+       " '__ge__',\n",
+       " '__getattribute__',\n",
+       " '__getitem__',\n",
+       " '__gt__',\n",
+       " '__hash__',\n",
+       " '__init__',\n",
+       " '__init_subclass__',\n",
+       " '__iter__',\n",
+       " '__le__',\n",
+       " '__len__',\n",
+       " '__lt__',\n",
+       " '__ne__',\n",
+       " '__new__',\n",
+       " '__reduce__',\n",
+       " '__reduce_ex__',\n",
+       " '__repr__',\n",
+       " '__setattr__',\n",
+       " '__setitem__',\n",
+       " '__sizeof__',\n",
+       " '__str__',\n",
+       " '__subclasshook__',\n",
+       " 'clear',\n",
+       " 'copy',\n",
+       " 'fromkeys',\n",
+       " 'get',\n",
+       " 'items',\n",
+       " 'keys',\n",
+       " 'pop',\n",
+       " 'popitem',\n",
+       " 'setdefault',\n",
+       " 'update',\n",
+       " 'values']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dir(dictionary)"
    ]
@@ -363,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -382,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,12 +466,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'11-21-2019'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "new_class.start_date"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Cohort"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(new_class)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -404,7 +524,7 @@
    "source": [
     "### Quick knowledge check:\n",
     "\n",
-    "**What is the appropriate sequence of these words?  A variable becomes an _______ when you _______ a _______ .**\n",
+    "**What is the appropriate sequence of these words?  A variable becomes an Object when you Initialize a Class .**\n",
     " - A: Initialize\n",
     " - B: Class\n",
     " - C: Object"
@@ -421,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -441,17 +561,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'str'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "student_list = [\"John\", \"Ariel\", \"Jace\", \"Romea\", \"Irina\"]\n",
     "\n",
@@ -460,16 +572,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'09-04-2019'"
+       "'11-21-2019'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -512,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -538,7 +650,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +677,7 @@
        "'SeanAbu'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -576,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -594,7 +706,7 @@
        " ('Amalia', 'John')]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,13 +731,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['John', 'Ariel', 'Jace', 'Romea', 'Irina', 'Amalia']"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "class cohort:\n",
     "    def __init__(something, students, program):\n",
@@ -663,11 +786,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "class Pizza:\n",
+    "    def __init__(self, toppings, size):\n",
+    "        self.toppings = toppings\n",
+    "        self.size = size"
    ]
   },
   {
@@ -679,11 +806,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "class Pizza:\n",
+    "    def __init__(self, toppings, size):\n",
+    "        self.toppings = toppings\n",
+    "        self.size = size\n",
+    "        \n",
+    "    def add_topping(self, topping):\n",
+    "        self.toppings.append(topping)\n",
+    "            \n",
+    "    def print_topping(self):\n",
+    "        print(self.toppings)\n",
+    "            \n",
+    "    def remove_topping(self, topping):\n",
+    "        self.toppings.pop(topping)"
    ]
   },
   {
@@ -695,11 +835,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<__main__.Pizza at 0x10ade8208>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "my_pizza = Pizza(['cheese'], 'Large')\n",
+    "\n",
+    "\n",
+    "# toppings = ['cheese', 'ham', 'olives']\n",
+    "# size = 'small'\n",
+    "\n",
+    "my_pizza"
    ]
   },
   {
@@ -715,7 +873,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "# your code here\n"
    ]
   },
   {
@@ -917,18 +1075,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Gender</th>\n",
+       "      <th>Height</th>\n",
+       "      <th>Weight</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>9986</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>63.352698</td>\n",
+       "      <td>141.906510</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9987</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>65.610243</td>\n",
+       "      <td>151.169475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9988</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>59.538729</td>\n",
+       "      <td>121.244876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9989</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>60.955084</td>\n",
+       "      <td>95.686674</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9990</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>63.179498</td>\n",
+       "      <td>141.266100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9991</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>62.636675</td>\n",
+       "      <td>102.853563</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9992</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>62.077832</td>\n",
+       "      <td>138.691680</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9993</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>60.030434</td>\n",
+       "      <td>97.687432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9994</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>59.098250</td>\n",
+       "      <td>110.529686</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>66.172652</td>\n",
+       "      <td>136.777454</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>67.067155</td>\n",
+       "      <td>170.867906</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>63.867992</td>\n",
+       "      <td>128.475319</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>69.034243</td>\n",
+       "      <td>163.852461</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>Female</td>\n",
+       "      <td>61.944246</td>\n",
+       "      <td>113.649103</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Gender     Height      Weight\n",
+       "9986  Female  63.352698  141.906510\n",
+       "9987  Female  65.610243  151.169475\n",
+       "9988  Female  59.538729  121.244876\n",
+       "9989  Female  60.955084   95.686674\n",
+       "9990  Female  63.179498  141.266100\n",
+       "9991  Female  62.636675  102.853563\n",
+       "9992  Female  62.077832  138.691680\n",
+       "9993  Female  60.030434   97.687432\n",
+       "9994  Female  59.098250  110.529686\n",
+       "9995  Female  66.172652  136.777454\n",
+       "9996  Female  67.067155  170.867906\n",
+       "9997  Female  63.867992  128.475319\n",
+       "9998  Female  69.034243  163.852461\n",
+       "9999  Female  61.944246  113.649103"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "measurements = pd.read_csv(\"weight-height.csv\")\n",
     "measurements.tail(14)\n",
-    "measurements.columns"
+    "#measurements.columns"
    ]
   },
   {
