--- a/Mod_1/Python_intro/Python-Conditionals-Loops-functions.ipynb
+++ b/Mod_1/Python_intro/Python-Conditionals-Loops-functions.ipynb
@@ -20,9 +20,7 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-    "\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -47,7 +45,18 @@
     "\n",
     "Write down the process you would go through to complete this task. \n",
     "\n",
-    "Write pseudo-code below:"
+    "Write pseudo-code below:\n",
+    "\n",
+    "$$pile1 = []\n",
+    "pile2 = []\n",
+    "for m&m in jar:\n",
+    "    if color(m&m)==primary_color:\n",
+    "        pile1.append(m&m)\n",
+    "    elif color(m&m)!=primary_color:\n",
+    "        pile2.append(m&m)$$\n",
+    "        \n",
+    "\n",
+    "    "
    ]
   },
   {
@@ -232,33 +241,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "primary_colors = ['red', 'yellow', 'blue']\n",
     "m_m = 'blue'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['blue']\n"
+     ]
+    }
+   ],
    "source": [
     "#your code here:\n",
     "\n",
-    "basket_1 =[]\n",
+    "basket_1 = []\n",
     "basket_2 = []\n",
     "\n",
     "\n",
-    "if ____ in ____:\n",
-    "    ____.append(m_m)\n",
+    "if m_m in primary_colors:\n",
+    "    basket_1.append(m_m)\n",
     "else:\n",
-    "    ____._____(____)\n",
+    "    basket_2.append(m_m)\n",
     "    \n",
-    "print(____)\n"
+    "print(basket_1)\n"
    ]
   },
   {
@@ -293,9 +309,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "e\n",
+      "x\n",
+      "a\n",
+      "m\n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      " \n",
+      "p\n",
+      "l\n",
+      "e\n"
+     ]
+    }
+   ],
    "source": [
     "example = 'exam      ple'\n",
     "\n",
@@ -305,9 +341,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi Margot.  Please come to my party on Saturday!\n",
+      "Hi Kathryn.  Please come to my party on Saturday!\n",
+      "Hi Prisila.  Please come to my party on Saturday!\n"
+     ]
+    }
+   ],
    "source": [
     "friends = ['Margot', 'Kathryn', 'Prisila']\n",
     "for friend in friends:\n",
@@ -317,9 +363,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Margot\n",
+      "Kathryn\n",
+      "Prisila\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(len(friends)):\n",
     "#     print('i is now:', i)\n",
@@ -363,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -372,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,18 +437,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Guess a number 0 throught 10 9\n",
+      "Nope, that's not it!\n",
+      "Guess again: 10\n",
+      "you got it right\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "guess = input(\"Guess a number 0 throught 10 \")\n",
@@ -430,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,11 +517,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['yellow', 'red', 'blue'] ['brown', 'green', 'orange']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# your code here\n",
+    "primary_colors = ['red', 'yellow', 'blue']\n",
+    "m_m = 'blue'\n",
+    "basket_1 = []\n",
+    "basket_2 = []\n",
+    "\n",
+    "\n",
+    "for m_m in basket_of_mms:\n",
+    "    if m_m in primary_colors:\n",
+    "        basket_1.append(m_m)\n",
+    "    else:\n",
+    "        basket_2.append(m_m)\n",
+    "    \n",
+    "print(basket_1, basket_2)"
    ]
   },
   {
@@ -456,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,18 +572,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([{'question': 'How many people can fit in a Corvette?', 'response_choices': [1, 2, 3, 4], 'answer': 2}, {'question': 'What is the MPG of a Corvette?', 'response_choices': [15, 20, 25, 30], 'answer': 15}, {'question': 'How much horsepower does a Corvette have?', 'response_choices': [200, 300, 400, 500], 'answer': 400}])\n"
+     ]
+    }
+   ],
    "source": [
     "print(questions.values())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'question': 'How many people can fit in a Corvette?', 'response_choices': [1, 2, 3, 4], 'answer': 2}\n",
+      "{'question': 'What is the MPG of a Corvette?', 'response_choices': [15, 20, 25, 30], 'answer': 15}\n",
+      "{'question': 'How much horsepower does a Corvette have?', 'response_choices': [200, 300, 400, 500], 'answer': 400}\n",
+      "['How many people can fit in a Corvette?', 'What is the MPG of a Corvette?', 'How much horsepower does a Corvette have?']\n"
+     ]
+    }
+   ],
    "source": [
     "#create a container to hold my list of questions\n",
     "list_of_questions = []\n",
@@ -502,9 +620,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 15, 400]\n"
+     ]
+    }
+   ],
    "source": [
     "#create a container to hold my list of questions\n",
     "list_of_answers = []\n",
@@ -518,9 +644,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "key =  A\n",
+      "value= {'question': 'How many people can fit in a Corvette?', 'response_choices': [1, 2, 3, 4], 'answer': 2}\n",
+      "key =  B\n",
+      "value= {'question': 'What is the MPG of a Corvette?', 'response_choices': [15, 20, 25, 30], 'answer': 15}\n",
+      "key =  C\n",
+      "value= {'question': 'How much horsepower does a Corvette have?', 'response_choices': [200, 300, 400, 500], 'answer': 400}\n"
+     ]
+    }
+   ],
    "source": [
     "for k,v in questions.items():\n",
     "    print('key = ',k)\n",
@@ -538,9 +677,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "16\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "for i in [12, 16, 17, 24, 29]:\n",
     "    if i % 2 == 1:  # if the number is odd\n",
@@ -560,9 +709,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "16\n",
+      "24\n",
+      "30\n",
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "for i in [12, 16, 17, 24, 29, 30]:\n",
     "    if i % 2 == 1:      # if the number is odd\n",
@@ -627,7 +788,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,9 +801,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I'm first call to user defined function!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"I'm first call to user defined function!sijdflk\""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "\n",
     "\n",
@@ -652,18 +831,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Again second call to the same function\n"
+     ]
+    }
+   ],
    "source": [
     "new_string = printme(\"Again second call to the same function\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Again second call to the same functionsijdflk\n"
+     ]
+    }
+   ],
    "source": [
     "print(new_string)"
    ]
@@ -710,9 +905,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Name: miki\n",
+      "Age 35\n"
+     ]
+    }
+   ],
    "source": [
     "# Function definition is here\n",
     "def printinfo( name, age = 35 ):\n",
@@ -722,7 +926,7 @@
     "   return;\n",
     "\n",
     "# Now you can call printinfo function\n",
-    "printinfo( age=50, name=\"miki\" )\n",
+    "#printinfo( age=50, name=\"miki\" )\n",
     "printinfo( name=\"miki\" )"
    ]
   },
@@ -739,8 +943,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ____(____):\n",
-    "    return l[____]"
+    "def pick(l):\n",
+    "    return l[-1]"
    ]
   },
   {
@@ -756,8 +960,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pick(l, ____):\n",
-    "    return (____[index])"
+    "def pick(l, index):\n",
+    "    return (l[index])"
    ]
   },
   {
@@ -769,21 +973,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ____(____, ____=____):\n",
-    "    return(____[____])"
+    "def pick(l, index=-1):\n",
+    "    return(l[index])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "### Call pick and pass `[1,3,5,7,9]` for the list and the `2` for the index."
+    "### Call pick and pass `[1,3,5,7,9]` for the list and the `2` for the index.\n",
+    "\n",
+    "pick([1,3,5,7,9], 2)"
    ]
   },
   {
@@ -799,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -816,9 +1033,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'int' object is not subscriptable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-35-6f15ccfd0ac6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-34-afb61bdc48ff>\u001b[0m in \u001b[0;36mpick\u001b[0;34m(l, index)\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mpick\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ml\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mindex\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mint\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m->\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0ml\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mindex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m: 'int' object is not subscriptable"
+     ]
+    }
+   ],
    "source": [
     "pick(10, 1)"
    ]
@@ -860,11 +1090,36 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# your code here\n",
+    "\n",
+    "def separating_mnms(basket_of_mnms):\n",
+    "    \n",
+    "    primary_colors = ['red', 'yellow', 'blue']\n",
+    "    m_m = 'blue'\n",
+    "    basket_1 = []\n",
+    "    basket_2 = []\n",
+    "\n",
+    "\n",
+    "    for m_m in basket_of_mms:\n",
+    "        if m_m in primary_colors:\n",
+    "            basket_1.append(m_m)\n",
+    "        else:\n",
+    "            basket_2.append(m_m)\n",
+    "    \n",
+    "    print(basket_1, basket_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# your code here"
+    "separating_mnms()"
    ]
   },
   {
@@ -876,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -940,24 +1195,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Abdul Tawab Safi', '08/04/1997', ['Tawaba', 'Kochi'], ['BJJ', 'Cricket', 'Gaming', 'MMA']]\n"
+     ]
+    }
+   ],
    "source": [
-    "student = students[____]\n",
-    "print(____)\n"
+    "student = students[0]\n",
+    "print(student)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Abdul Tawab Safi', 'DOB': '08/04/1997', 'nicknames': ['Tawaba', 'Kochi'], 'interests': [3]}\n"
+     ]
+    }
+   ],
    "source": [
     "#create a container to hold the individucal student\n",
-    "student_dict = {_______}\n",
+    "student_dict = {'name': student[0], 'DOB': student[1], 'nicknames': student[2], 'interests': [3]}\n",
     "\n",
     "\n",
     "print(student_dict)"
@@ -972,11 +1243,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Abdul Tawab Safi', 'DOB': '08/04/1997', 'nicknames': ['Tawaba', 'Kochi'], 'interests': [3]}, {'name': 'Bridget Boakye', 'DOB': '07-13-1990', 'nicknames': ['Bre', 'B'], 'interests': [3]}, {'name': 'Cristina', 'DOB': '09/09', 'nicknames': [' Ms.Donkey', 'Cristi'], 'interests': [3]}, {'name': 'Danny(Haoyang)', 'DOB': '1997-03-19', 'nicknames': [], 'interests': [3]}, {'name': 'Dustin', 'DOB': '04/15/94', 'nicknames': ['Dusty', 'D'], 'interests': [3]}, {'name': 'Gregory DeSantis', 'DOB': '11/23/1987', 'nicknames': ['Blaze'], 'interests': [3]}, {'name': 'Harrison Miller', 'DOB': '10-2', 'nicknames': ['harry'], 'interests': [3]}, {'name': 'Jeremy Owens', 'DOB': '03/30/1990', 'nicknames': ['Jerbea'], 'interests': [3]}, {'name': 'Jeremy Reikes', 'DOB': '10-12-1995', 'nicknames': ['Germ', 'Jer'], 'interests': [3]}, {'name': 'Jonathan', 'DOB': '02/19/1994', 'nicknames': ['Jp', 'Peck'], 'interests': [3]}, {'name': 'Matthew', 'DOB': '4.14.1989', 'nicknames': ['matty', 'wass'], 'interests': [3]}, {'name': 'Minna', 'DOB': '11/19/1996', 'nicknames': ['Minna fish', 'Min'], 'interests': [3]}, {'name': 'Nabil Abbas,', 'DOB': '12/07/1994', 'nicknames': ['Nibz', 'Nabeezy', 'Balle'], 'interests': [3]}, {'name': 'Natalie Del Rossi', 'DOB': '10-23-1994', 'nicknames': 'Nat', 'interests': [3]}, {'name': 'Remy Canario', 'DOB': '10/11/1988', 'nicknames': ['Remstar', 'Rem', 'Remyx'], 'interests': [3]}, {'name': 'Xristos', 'DOB': 'March 24', 'nicknames': 'Zris', 'interests': [3]}, {'name': 'Taylor Hawks', 'DOB': '11/09/1990', 'nicknames': [None], 'interests': [3]}, {'name': 'Vishal Patel', 'DOB': '02/08/1990', 'nicknames': ['V', 'Visual', 'Vish'], 'interests': [3]}]\n"
+     ]
+    }
+   ],
    "source": [
     "# first create a container to hold all of the student_dicts\n",
+    "student_dicts = []\n",
+    "\n",
+    "for student in students:\n",
+    "    student_dict = {'name': student[0], 'DOB': student[1], 'nicknames': student[2], 'interests': [3]}\n",
+    "    student_dicts.append(student_dict)\n",
+    "    \n",
+    "print(student_dicts)\n",
+    "\n",
     "\n",
     "# create a loop"
    ]
@@ -990,11 +1277,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write function here\n"
+    "# write function here\n",
+    "def parse_students(students):\n",
+    "    student_dicts = []\n",
+    "\n",
+    "    for student in students:\n",
+    "        student_dict = {'name': student[0], 'DOB': student[1], 'nicknames': student[2], 'interests': [3]}\n",
+    "        student_dicts.append(student_dict)\n",
+    "    \n",
+    "    return student_dicts\n",
+    "\n"
    ]
   },
   {
