--- a/Mod_2/JSON_APIs/Yelp_API_SQL_lab.ipynb
+++ b/Mod_2/JSON_APIs/Yelp_API_SQL_lab.ipynb
@@ -126,38 +126,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Connect to DB server on AWS"
+    "import requests\n",
+    "import json\n",
+    "import mysql.connector"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## Create new DB "
+    "import config"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a table for the Businesses"
+    "## Connect to DB server on AWS\n",
+    "conn = mysql.connector.connect(\n",
+    "    host = config.host,\n",
+    "    user = config.user,\n",
+    "    passwd = config.pw\n",
+    ")\n",
+    "\n",
+    "cur = conn.cursor()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create a table for the reviews"
+    "## Create new DB \n",
+    "DB_NAME = 'yelp_again'\n",
+    "\n",
+    "def create_database(cursor, database):\n",
+    "    try:\n",
+    "        cur.execute(\"\"\"\n",
+    "        CREATE DATABASE {} DEFAULT CHARACTER SET 'utf8'\n",
+    "        \"\"\".format(database)\n",
+    "        )\n",
+    "    except mysql.connector.Error as err:\n",
+    "        print(\"Failed creating database {}\").format(err)\n",
+    "        exit(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a table for the Businesses\n",
+    "TABLES = {}\n",
+    "\n",
+    "TABLES['Businesses'] = (\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE Businesses(\n",
+    "    business_id varchar(22) NOT NULL,\n",
+    "    name varchar(50),\n",
+    "    rating decimal(3,2),\n",
+    "    review_count int(22),\n",
+    "    price varchar(4),\n",
+    "    PRIMARY KEY(business_id)\n",
+    "    )ENGINE=InnoDB\n",
+    "\"\"\" \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    CREATE TABLE businesses(\\n    business_id varchar(22) NOT NULL,\\n    name varchar(50),\\n    rating decimal(3,2),\\n    review_count int(22),\\n    price varchar(4),\\n    PRIMARY KEY(business_id)\\n    )ENGINE=InnoDB\\n'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TABLES['Businesses']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a table for the reviews\\\n",
+    "TABLES['Reviews'] = (\n",
+    "    \"\"\"\n",
+    "    CREATE TABLE Reviews(\n",
+    "    review_id varchar(22) NOT NULL,\n",
+    "    text text(1000),\n",
+    "    time_created varchar(22),\n",
+    "    PRIMARY KEY(review_id)\n",
+    "    )ENGINE=InnoDB\n",
+    "\"\"\" \n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'\\n    CREATE TABLE Reviews(\\n    review_id varchar(22) NOT NULL,\\n    text text(1000),\\n    time_created varchar(22),\\n    PRIMARY KEY(review_id)\\n    )ENGINE=InnoDB\\n'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "TABLES['Reviews']"
    ]
   },
   {
@@ -179,7 +281,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write a function to make a call to the yelp API"
+    "# Write a function to make a call to the yelp API\n",
+    "def call_api(api_key, url_params):\n",
+    "    "
    ]
   },
   {
@@ -194,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,6 +417,7 @@
    "source": [
     "###  Pagination\n",
     "\n",
+    "\n",
     "Returning to the Yelp API, the [documentation](https://www.yelp.com/developers/documentation/v3/business_search) also provides us details regarding the API limits. These often include details about the number of requests a user is allowed to make within a specified time limit and the maximum number of results to be returned. In this case, we are told that any request has a maximum of 50 results per request and defaults to 20. Furthermore, any search will be limited to a total of 1000 results. To retrieve all 1000 of these results, we would have to page through the results piece by piece, retriving 50 at a time. Processes such as these are often refered to as pagination.\n",
     "\n",
     "Now that you have an initial response, you can examine the contents of the json container. For example, you might start with ```response.json().keys()```. Here, you'll see a key for `'total'`, which tells you the full number of matching results given your query parameters. Write a loop (or ideally a function) which then makes successive API calls using the offset parameter to retrieve all of the results (or 5000 for a particularly large result set) for the original query. As you do this, be mindful of how you store the data. \n",
@@ -337,6 +442,8 @@
    "outputs": [],
    "source": [
     "def yelp_call(url_params, api_key):\n",
+    "    \n",
+    "    \n",
     "    # your code to make the yelp call\n",
     "    return data"
    ]
@@ -359,6 +466,7 @@
    "outputs": [],
    "source": [
     "def db_insert(cnx, cursor, parsed results):\n",
+    "    \n",
     "    # your code to insert and commit the results\n",
     "    # I would create the connection and cursor outside of this function and then pass it through"
    ]
@@ -412,7 +520,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   },
   "toc": {
    "base_numbering": 1,
