--- a/Mod_2/JSON_APIs/JSON_and_API_calls.ipynb
+++ b/Mod_2/JSON_APIs/JSON_and_API_calls.ipynb
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -366,18 +366,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "<Response [200]>"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-3-d3a67accd037>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-d3a67accd037>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    response.\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
@@ -398,9 +396,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Code here \n",
     "response.status_code == requests.codes.ok"
@@ -429,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -508,14 +517,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1571930507, \\n    \"latitude\": 40.71, \\n    \"longitude\": -74.0, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 618, \\n      \"risetime\": 1571932240\\n    }, \\n    {\\n      \"duration\": 642, \\n      \"risetime\": 1571938042\\n    }, \\n    {\\n      \"duration\": 396, \\n      \"risetime\": 1571943927\\n    }, \\n    {\\n      \"duration\": 425, \\n      \"risetime\": 1571992509\\n    }, \\n    {\\n      \"duration\": 649, \\n      \"risetime\": 1571998160\\n    }\\n  ]\\n}\\n'\n"
+      "b'{\\n  \"message\": \"success\", \\n  \"request\": {\\n    \"altitude\": 100, \\n    \"datetime\": 1575560917, \\n    \"latitude\": 40.71, \\n    \"longitude\": -74.0, \\n    \"passes\": 5\\n  }, \\n  \"response\": [\\n    {\\n      \"duration\": 467, \\n      \"risetime\": 1575562973\\n    }, \\n    {\\n      \"duration\": 648, \\n      \"risetime\": 1575568652\\n    }, \\n    {\\n      \"duration\": 607, \\n      \"risetime\": 1575574494\\n    }, \\n    {\\n      \"duration\": 557, \\n      \"risetime\": 1575580380\\n    }, \\n    {\\n      \"duration\": 608, \\n      \"risetime\": 1575586217\\n    }\\n  ]\\n}\\n'\n"
      ]
     }
    ],
@@ -535,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -544,7 +553,7 @@
        "bytes"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -579,18 +588,18 @@
       "text/plain": [
        "{'message': 'success',\n",
        " 'request': {'altitude': 100,\n",
-       "  'datetime': 1571930507,\n",
+       "  'datetime': 1575560917,\n",
        "  'latitude': 40.71,\n",
        "  'longitude': -74.0,\n",
        "  'passes': 5},\n",
-       " 'response': [{'duration': 618, 'risetime': 1571932240},\n",
-       "  {'duration': 642, 'risetime': 1571938042},\n",
-       "  {'duration': 396, 'risetime': 1571943927},\n",
-       "  {'duration': 425, 'risetime': 1571992509},\n",
-       "  {'duration': 649, 'risetime': 1571998160}]}"
+       " 'response': [{'duration': 467, 'risetime': 1575562973},\n",
+       "  {'duration': 648, 'risetime': 1575568652},\n",
+       "  {'duration': 607, 'risetime': 1575574494},\n",
+       "  {'duration': 557, 'risetime': 1575580380},\n",
+       "  {'duration': 608, 'risetime': 1575586217}]}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -610,16 +619,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'duration': 618, 'risetime': 1571932240}"
+       "{'duration': 467, 'risetime': 1575562973}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -640,21 +649,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "{'Server': 'nginx/1.10.3',\n",
-       " 'Date': 'Thu, 24 Oct 2019 15:23:45 GMT',\n",
+       " 'Date': 'Thu, 05 Dec 2019 15:48:54 GMT',\n",
        " 'Content-Type': 'application/json',\n",
        " 'Content-Length': '519',\n",
        " 'Connection': 'keep-alive',\n",
        " 'Via': '1.1 vegur'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,9 +783,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- How many api endpoints does the API offer?\n",
-    "- If you are searching for businesses, what are the required arguments you need to pass to the API?\n",
-    "- What is limit on the number of results an API request will return to you?\n",
+    "- How many api endpoints does the API offer? 7\n",
+    "- If you are searching for businesses, what are the required arguments you need to pass to the API? 3: 'location', 'latitude', 'longitude'\n",
+    "- What is limit on the number of results an API request will return to you? \n",
     "- When trying to pull reviews from the API what inromation do you need to pass in your API request?"
    ]
   },
@@ -1020,7 +1029,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
