--- a/Mod_2/SQL/AWS_MYSQL_PYTHON_Student_Data.ipynb
+++ b/Mod_2/SQL/AWS_MYSQL_PYTHON_Student_Data.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,23 +110,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'asya'"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "config.pw_example"
+    "config.user"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<mysql.connector.connection.MySQLConnection object at 0x11279c2e8>\n"
+      "<mysql.connector.connection_cext.CMySQLConnection object at 0x1126c1da0>\n"
      ]
     }
    ],
@@ -162,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -739,25 +750,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "JSONDecodeError",
-     "evalue": "Expecting property name enclosed in double quotes: line 3 column 2 (char 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mJSONDecodeError\u001b[0m                           Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-7e3953cfeed9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'students.json'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'r'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdata\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/anaconda3/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mload\u001b[0;34m(fp, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    294\u001b[0m         \u001b[0mcls\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcls\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobject_hook\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mobject_hook\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    295\u001b[0m         \u001b[0mparse_float\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_float\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparse_int\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparse_int\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 296\u001b[0;31m         parse_constant=parse_constant, object_pairs_hook=object_pairs_hook, **kw)\n\u001b[0m\u001b[1;32m    297\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    298\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/json/__init__.py\u001b[0m in \u001b[0;36mloads\u001b[0;34m(s, encoding, cls, object_hook, parse_float, parse_int, parse_constant, object_pairs_hook, **kw)\u001b[0m\n\u001b[1;32m    346\u001b[0m             \u001b[0mparse_int\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mparse_float\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m \u001b[0;32mand\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    347\u001b[0m             parse_constant is None and object_pairs_hook is None and not kw):\n\u001b[0;32m--> 348\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0m_default_decoder\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdecode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    349\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0mcls\u001b[0m \u001b[0;32mis\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    350\u001b[0m         \u001b[0mcls\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mJSONDecoder\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mdecode\u001b[0;34m(self, s, _w)\u001b[0m\n\u001b[1;32m    335\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    336\u001b[0m         \"\"\"\n\u001b[0;32m--> 337\u001b[0;31m         \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mraw_decode\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    338\u001b[0m         \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_w\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    339\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/anaconda3/lib/python3.7/json/decoder.py\u001b[0m in \u001b[0;36mraw_decode\u001b[0;34m(self, s, idx)\u001b[0m\n\u001b[1;32m    351\u001b[0m         \"\"\"\n\u001b[1;32m    352\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 353\u001b[0;31m             \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mscan_once\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0midx\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    354\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mStopIteration\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    355\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mJSONDecodeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Expecting value\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0ms\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalue\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mJSONDecodeError\u001b[0m: Expecting property name enclosed in double quotes: line 3 column 2 (char 4)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "\n",
@@ -767,12 +762,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#examine that student data\n",
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Anastasia Gorina', 'dob': '1991-07-19', 'fav_food': 'oysters', 'birthplace': 'St. Petersburg, Russia', 'years_in_nyc': 5}, {'name': 'Andres M Chaves', 'dob': '1983-01-22', 'fav_food': 'chocolate', 'birthplace': 'Bogota, CU', 'years_in_nyc': 6}, {'name': 'Andrew Triola', 'dob': '1989-10-17', 'fav_food': 'baked ziti', 'birthplace': 'Washington DC', 'years_in_nyc': 3}, {'name': 'Anita Guo', 'dob': '1990-12-17', 'fav_food': 'Seafood Boil', 'birthplace': 'Fuzhou, China', 'years_in_nyc': 16}, {'name': 'Askhat Yktybaev', 'dob': '1981-25-02', 'fav_food': 'cheese cake', 'birthplace': 'Bishkek, Kyrgyzstan', 'years_in_nyc': 3}, {'name': 'Aviva Sally Mazurek', 'dob': '1994-04-29', 'fav_food': 'Burgers', 'birthplace': 'Bronx, NY', 'years_in_nyc': 2}, {'name': 'Ben Johnson-Laird', 'dob': '1900-04-01', 'fav_food': 'Roast Beef and Yorkshire pudding', 'birthplace': 'London, UK', 'years_in_nyc': 21}, {'name': 'Brittany Fowle', 'dob': '1992-05-27', 'fav_food': 'noodles', 'birthplace': 'Painesville, OH', 'years_in_nyc': 9}, {'name': 'Chadwick Balloo', 'dob': '1991-07-29', 'fav_food': 'chicken', 'birthplace': 'Queens, New York', 'years_in_nyc': 1}, {'name': 'Ed Haracz', 'dob': '1995-02-24', 'fav_food': 'pizza', 'birthplace': 'Glen Ridge, NJ', 'years_in_nyc': 0}, {'name': 'Grace Park', 'dob': '1990-04-05', 'fav_food': 'sushi', 'birthplace': 'Flushing, NY', 'years_in_nyc': 29}, {'name': 'Jackson Bull', 'dob': '1987-11-28', 'fav_food': 'fried_chicken', 'birthplace': 'Nashville, TN', 'years_in_nyc': 8}, {'name': 'Julia Chong', 'dob': '1996-11-27', 'fav_food': 'soup dumplings', 'birthplace': 'Portland, OR', 'years_in_nyc': 1.5}, {'name': 'Owen Peng', 'dob': '1996-05-04', 'fav_food': 'Burgers', 'birthplace': 'OKC, OK', 'years_in_nyc': 13}, {'name': ' Raphael Krantz', 'dob': '1973-03-21', 'fav_food': 'lasagna', 'birthplace': 'New York City', 'years_in_nyc': 31}, {'name': 'Rob Zifchak', 'dob': '1989-08-02', 'fav_food': 'Sushi', 'birthplace': 'Santa Monica, CA', 'years_in_nyc': 1.5}, {'name': 'Robert Alterman', 'dob': '1996-03-16', 'fav_food': 'chicken fingers', 'birthplace': 'New Rochelle, NY', 'years_in_nyc': 3}, {'name': 'Sean Abu Wilson', 'birthday': '1985-02-06', 'fav_food': 'strawberry cake', 'birthplace': 'Birmingham, AL', 'years_in_nyc': 8}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#examine that student data"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -792,11 +823,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# "
+    "cnx = mysql.connector .connect(\n",
+    "    host = config.host,\n",
+    "    user = config.user,\n",
+    "    passwd = config.pw\n",
+    ")\n",
+    "\n",
+    "cursor = cnx.cursor()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(\"CREATE DATABASE students\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnx.database = 'students'"
    ]
   },
   {
@@ -808,15 +863,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "create_query = \"\"\"\n",
+    "create_query = \"\"\"CREATE TABLE students (\n",
+    "                name varchar(50),\n",
+    "                dob date,\n",
+    "                fav_food varchar(100),\n",
+    "                birthplace varchar(59),\n",
+    "                years_in_nyc float);\n",
     "\n",
-    ");\n",
-    "\"\"\""
+    "            \"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cursor.execute(create_query)"
    ]
   },
   {
@@ -837,20 +905,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Anastasia Gorina',\n",
+       " 'dob': '1991-07-19',\n",
+       " 'fav_food': 'oysters',\n",
+       " 'birthplace': 'St. Petersburg, Russia',\n",
+       " 'years_in_nyc': 5}"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "test_student = data[0]"
+    "student = data[0]\n",
+    "student"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('Anastasia Gorina', '1991-07-19', 'oysters', 'St. Petersburg, Russia', 5)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "Now use a for loop to loop over all of data and return a list that we can use for `executemany()`.\n",
-    "\n",
-    "**If all of your data isn't formatted as expected, this will cause your loop to fail**  you might have to account for 'bad data' in your for loop."
+    "(student['name'], student['dob'], student['fav_food'], student['birthplace'], student['years_in_nyc'])"
    ]
   },
   {
@@ -865,12 +960,38 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now use a for loop to loop over all of data and return a list that we can use for `executemany()`.\n",
+    "\n",
+    "**If all of your data isn't formatted as expected, this will cause your loop to fail**  you might have to account for 'bad data' in your for loop."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "student['dob'] = student.pop('birthday')\n",
+    "#dictionary[new_key] = dictionary.pop(old_key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "students_list = []\n",
     "    \n",
     "for student in data:\n",
     "\n",
-    "    student_tuple= ()\n",
+    "    student_tuple = (student['name'], student['dob'], student['fav_food'], student['birthplace'], student['years_in_nyc'])\n",
     "    students_list.append(student_tuple)"
    ]
   },
@@ -879,6 +1000,60 @@
    "metadata": {},
    "source": [
     "Now that we have this list of tuples, lets use `executemany()` to insert the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Anastasia Gorina', '1991-07-19', 'oysters', 'St. Petersburg, Russia', 5),\n",
+       " ('Andres M Chaves', '1983-01-22', 'chocolate', 'Bogota, CU', 6),\n",
+       " ('Andrew Triola', '1989-10-17', 'baked ziti', 'Washington DC', 3),\n",
+       " ('Anita Guo', '1990-12-17', 'Seafood Boil', 'Fuzhou, China', 16),\n",
+       " ('Askhat Yktybaev', '1981-25-02', 'cheese cake', 'Bishkek, Kyrgyzstan', 3),\n",
+       " ('Aviva Sally Mazurek', '1994-04-29', 'Burgers', 'Bronx, NY', 2),\n",
+       " ('Ben Johnson-Laird',\n",
+       "  '1900-04-01',\n",
+       "  'Roast Beef and Yorkshire pudding',\n",
+       "  'London, UK',\n",
+       "  21),\n",
+       " ('Brittany Fowle', '1992-05-27', 'noodles', 'Painesville, OH', 9),\n",
+       " ('Chadwick Balloo', '1991-07-29', 'chicken', 'Queens, New York', 1),\n",
+       " ('Ed Haracz', '1995-02-24', 'pizza', 'Glen Ridge, NJ', 0),\n",
+       " ('Grace Park', '1990-04-05', 'sushi', 'Flushing, NY', 29),\n",
+       " ('Jackson Bull', '1987-11-28', 'fried_chicken', 'Nashville, TN', 8),\n",
+       " ('Julia Chong', '1996-11-27', 'soup dumplings', 'Portland, OR', 1.5),\n",
+       " ('Owen Peng', '1996-05-04', 'Burgers', 'OKC, OK', 13),\n",
+       " (' Raphael Krantz', '1973-03-21', 'lasagna', 'New York City', 31),\n",
+       " ('Rob Zifchak', '1989-08-02', 'Sushi', 'Santa Monica, CA', 1.5),\n",
+       " ('Robert Alterman', '1996-03-16', 'chicken fingers', 'New Rochelle, NY', 3),\n",
+       " ('Sean Abu Wilson', '1985-02-06', 'strawberry cake', 'Birmingham, AL', 8)]"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "students_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stmt = \"\"\"INSERT INTO students  (name, dob, fav_food, birthplace, years_in_nyc)\n",
+    "               VALUES (%(name)s, %(dob)s, %(fav_food)s, %(birthplace)s, %(years_in_nyc)s)\"\"\"\n",
+    "\n",
+    "cursor.executemany(stmt, data)\n",
+    "cnx.commit()"
    ]
   },
   {
@@ -912,6 +1087,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "s = 'xAG4O7l-t1ubbwVAlPnDKg'\n",
+    "len(s)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "22"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "st = 'E8RJkjfdcwgtyoPMjQ_Olg'\n",
+    "len(st)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -934,7 +1151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
