--- a/Mod_2/SQL/SQL_Query_Intro.ipynb
+++ b/Mod_2/SQL/SQL_Query_Intro.ipynb
@@ -156,24 +156,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write SQL create statement\n",
     "\n",
     "create_table = \"\"\"\n",
+    "    CREATE TABLE TableName (\n",
+    "    studentID integer,\n",
+    "    name text,\n",
+    "    birthdate numeric)\n",
     "\n",
     "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x103c0ea40>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# use the cursor to execute the statement"
+    "# use the cursor to execute the statement\n",
+    "c.execute(create_table)"
    ]
   },
   {
@@ -253,15 +269,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "# write the alter statemen\n",
     "\n",
     "alter_table = \"\"\"\n",
-    "\n",
+    "    ALTER TABLE TableName\n",
+    "    DROP COLUMN birthdate;\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "near \"DROP\": syntax error",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-13-8c52c76f453c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0malter_table\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: near \"DROP\": syntax error"
+     ]
+    }
+   ],
+   "source": [
+    "c.execute(alter_table)"
    ]
   },
   {
@@ -305,15 +343,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "# create drop statement\n",
     "\n",
     "drop_table = \"\"\"\n",
+    "    DROP TABLE TableName;\n",
     "\n",
     "\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x103c0ea40>"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.execute(drop_table)"
    ]
   },
   {
@@ -506,20 +565,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# write create query"
+    "# write create query\n",
+    "create_table = \"\"\"\n",
+    "    CREATE TABLE Students (\n",
+    "    student_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+    "    name TEXT,\n",
+    "    birthdate TEXT,\n",
+    "    NYC_since REAL,\n",
+    "    favorite_food TEXT,\n",
+    "    birthplace TEXT);\n",
+    "    \"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<sqlite3.Cursor at 0x103c0ea40>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# execute create query"
+    "# execute create query\n",
+    "c.execute(create_table)"
    ]
   },
   {
@@ -664,20 +744,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Write Insert stattement"
+    "# Write Insert stattement\n",
+    "\n",
+    "insert = \"\"\"\n",
+    "    INSERT INTO Students VALUES(\n",
+    "    'Anastasia', '07-19', 5, 'oysters', 'St-Petersburg'\n",
+    "    )\n",
+    "\n",
+    "\n",
+    "\"\"\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OperationalError",
+     "evalue": "table Students has 6 columns but 5 values were supplied",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-31-0694559e36e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# execute insert statement\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mOperationalError\u001b[0m: table Students has 6 columns but 5 values were supplied"
+     ]
+    }
+   ],
    "source": [
-    "# execute insert statement"
+    "# execute insert statement\n",
+    "c.execute(insert)"
    ]
   },
   {
@@ -867,7 +968,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
